<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background_color">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/mask"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/movie_mask"
                    android:foreground="@drawable/gradient"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/gradient" />

                <ImageView
                    android:id="@+id/favourites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:contentDescription="@string/favourite"
                    app:layout_constraintBottom_toBottomOf="@+id/back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/back"
                    app:srcCompat="@drawable/ic_not_favorite" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/back"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon.Back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_60"
                    android:text="@string/image_back"
                    app:icon="@drawable/ic_arrow_back"
                    app:iconTint="@color/medium_gray_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pg"
                    style="@style/Widget.MaterialComponents.TextView.SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_225"
                    android:background="@drawable/rounded_rectangle"
                    android:padding="@dimen/dimen_4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/pg" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background_color"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/movie_name"
                style="@style/Widget.MaterialComponents.TextView.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/movie_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tag"
                style="@style/Widget.MaterialComponents.TextView.TagText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_name"
                tools:text="@string/tags" />

            <RatingBar
                android:id="@+id/movie_rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_8"
                android:progressBackgroundTint="@color/medium_gray_color"
                android:progressTint="@color/light_red_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tag" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reviews"
                style="@style/Widget.MaterialComponents.TextView.SubTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                app:layout_constraintBottom_toBottomOf="@+id/movie_rating"
                app:layout_constraintStart_toEndOf="@+id/movie_rating"
                app:layout_constraintTop_toTopOf="@+id/movie_rating"
                tools:text="@string/reviews"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/storyline"
                style="@style/Widget.MaterialComponents.TextView.SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/storyline"
                app:layout_constraintBottom_toTopOf="@+id/movie_storyline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/movie_storyline"
                style="@style/Widget.MaterialComponents.TextView.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:paddingBottom="@dimen/dimen_20"
                app:layout_constraintBottom_toTopOf="@+id/cast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyline"
                tools:text="@string/movie_description" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cast"
                style="@style/Widget.MaterialComponents.TextView.SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:paddingTop="@dimen/dimen_4"
                android:paddingBottom="@dimen/dimen_4"
                android:text="@string/cast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_storyline" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actors"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                tools:listitem="@layout/list_view_actor_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>