<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/movies_list_item_background"
    android:layout_margin="@dimen/views_margin_2">

    <ImageView
        android:id="@+id/movie_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:foreground="@drawable/gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avengers" />

    <ImageView
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/views_margin_8"
        app:layout_constraintBottom_toBottomOf="@+id/pg"
        app:layout_constraintEnd_toEndOf="@+id/movie_background"
        app:layout_constraintTop_toTopOf="@+id/pg"
        app:srcCompat="@drawable/ic_not_favorite" />

    <TextView
        android:id="@+id/pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/views_margin_8"
        android:layout_marginTop="@dimen/views_margin_8"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/roboto"
        android:padding="@dimen/views_margin_4"
        android:paddingTop="@dimen/views_margin_4"
        android:paddingBottom="@dimen/views_margin_4"
        android:text="@string/pg"
        android:textColor="@color/title_color"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/movie_background"
        app:layout_constraintTop_toTopOf="@+id/movie_background" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/reviews"
        android:textAllCaps="true"
        android:textColor="@color/arrow_color"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating"
        app:layout_constraintStart_toEndOf="@+id/movie_rating"
        app:layout_constraintTop_toTopOf="@+id/movie_rating"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/views_margin_8"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tags"
        android:textColor="@color/tag_text_color"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/movie_background"
        app:layout_constraintStart_toStartOf="@+id/movie_background"
        tools:ignore="SmallSp" />

    <RatingBar
        android:id="@+id/movie_rating"
        style="@style/myRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/views_margin_8"
        android:layout_marginTop="@dimen/views_margin_4"
        android:layout_marginBottom="@dimen/views_margin_8"
        android:numStars="5"
        android:rating="4"
        app:layout_constraintBottom_toBottomOf="@+id/movie_background"
        app:layout_constraintStart_toStartOf="@+id/movie_background"
        app:layout_constraintTop_toBottomOf="@+id/tag" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/views_margin_8"
        android:layout_marginTop="@dimen/views_margin_8"
        android:layout_marginEnd="@dimen/views_margin_8"
        android:fontFamily="@font/roboto"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/movie_title"
        android:textColor="@color/title_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_background" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/views_margin_8"
        android:layout_marginEnd="@dimen/views_margin_8"
        android:layout_marginBottom="@dimen/views_margin_8"
        android:fontFamily="@font/roboto"
        android:text="@string/duration"
        android:textAllCaps="true"
        android:textColor="@color/arrow_color"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>
