<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/movie_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tx_movie_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/im_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/mask" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient" />

        </FrameLayout>

        <TextView
            android:id="@+id/tx_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/views_margin_8"
            android:fontFamily="@font/roboto"
            android:text="@string/image_back"
            android:textColor="@color/arrow_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/im_back"
            app:layout_constraintStart_toEndOf="@+id/im_back"
            app:layout_constraintTop_toTopOf="@+id/im_back" />

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/views_margin_16"
            android:layout_marginTop="60dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/tx_pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/views_margin_16"
            android:layout_marginTop="225dp"
            android:fontFamily="@font/roboto"
            android:text="13 +"
            android:textColor="@color/title_color"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/views_margin_16"
            android:fontFamily="@font/roboto_medium"
            android:text="Avengers: End Game"
            android:textColor="@color/title_color"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tx_pg"
            app:layout_constraintTop_toBottomOf="@+id/tx_pg" />

        <TextView
            android:id="@+id/tx_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/views_margin_16"
            android:layout_marginTop="@dimen/views_margin_8"
            android:layout_marginEnd="@dimen/views_margin_16"
            android:fontFamily="@font/roboto"
            android:text="Action, Adventure, Fantasy"
            android:textColor="@color/tag_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_movie_name" />

        <RatingBar
            android:id="@+id/movie_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/views_margin_16"
            android:layout_marginTop="@dimen/views_margin_8"
            android:progressBackgroundTint="@color/arrow_color"
            android:progressTint="@color/tag_text_color"
            android:rating="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_tag" />

        <TextView
            android:id="@+id/tx_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/views_margin_8"
            android:fontFamily="@font/roboto"
            android:text="125 REVIEWS"
            android:textColor="@color/arrow_color"
            app:layout_constraintBottom_toBottomOf="@+id/movie_rating"
            app:layout_constraintStart_toEndOf="@+id/movie_rating"
            app:layout_constraintTop_toTopOf="@+id/movie_rating" />

        <TextView
            android:id="@+id/tx_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/views_margin_16"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/views_margin_16"
            android:fontFamily="@font/roboto_medium"
            android:paddingTop="@dimen/text_storyline_padding"
            android:paddingBottom="@dimen/text_storyline_padding"
            android:text="@string/storyline"
            android:textColor="@color/title_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tx_movie_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_reviews" />

        <TextView
            android:id="@+id/tx_movie_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/views_margin_16"
            android:layout_marginEnd="@dimen/views_margin_16"
            android:alpha=".75"
            android:fontFamily="@font/roboto"
            android:paddingTop="@dimen/text_description_padding"
            android:paddingBottom="@dimen/text_description_padding"
            android:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe."
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tx_cast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_storyline" />

        <TextView
            android:id="@+id/tx_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/views_margin_16"
            android:layout_marginEnd="@dimen/views_margin_16"
            android:fontFamily="@font/roboto_medium"
            android:paddingTop="@dimen/text_cast_padding"
            android:paddingBottom="@dimen/text_cast_padding"
            android:text="@string/cast"
            android:textColor="@color/title_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_movie_description" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/views_margin_16"
            android:layout_marginTop="@dimen/views_margin_8"
            android:layout_marginEnd="@dimen/views_margin_16"
            android:layout_marginBottom="@dimen/views_margin_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_cast">

            <include
                layout="@layout/view_actors"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:isScrollContainer="false" />
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>